--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logos/odisha-emblem.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/odisha-emblem.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collectorate Jharsuguda | Government of Odisha</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "GovernmentOffice",
+        "name": "Collectorate Jharsuguda",
+        "url": "https://jharsuguda.odisha.org",
+        "telephone": "06645-270070",
+        "mobile": "8093178590",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+918999470824",
+          "contactType": "WhatsApp Citizen Service",
+          "areaServed": "IN",
+          "availableLanguage": ["en", "hi", "or"]
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
