--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/odisha-emblem.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collectorate Jharsuguda | Government of Odisha</title>
+    <meta name="description" content="Official website of District Administration Jharsuguda, Government of Odisha. Access public services, grievance redressal, and information." />
+    <meta name="author" content="District Administration Jharsuguda" />
+    <title>Jharsuguda District Administration | Government of Odisha</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
